--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.74.0",
     "@types/file-saver": "^2.0.7",
     "docx-templates": "^4.15.0",
     "file-saver": "^2.0.5",
     "i18next": "^25.8.4",
     "i18next-browser-languagedetector": "^8.2.0",
+    "pdfjs-dist": "^5.4.624",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-easy-crop": "^5.5.6",
     "react-i18next": "^16.5.4",
     "react-router-dom": "^7.13.0",
     "zustand": "^5.0.11"
